@@ -1,3 +1,8 @@
+2007-10-04  Vitaly Alexeev <tishka92@yahoo.com>
+		* gameswf/gameswf_as_classes/as_broadcaster.cpp
+		* gameswf/gameswf_as_classes/as_broadcaster.h
+		First we should process completely one event then another
+		
 2007-10-02  Vitaly Alexeev <tishka92@yahoo.com>
 		* gameswf/gameswf.h
 		* gameswf/gameswf_function.cpp
